<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="Motivation to learn ML"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textAlignment="gravity"
        android:background="@color/background_dark"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textAlignment="gravity"
            android:layout_marginBottom="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@color/background_light"
            >
            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/how_will_app_help_title"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="190dp"
                android:textColor="@color/foreground_light"

                />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/how_will_app_help_desc1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/how_will_app_help_desc2"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/how_will_app_help_desc3"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/how_will_app_help_desc4"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:text="@string/how_will_app_help_desc5"
                android:textColor="@color/white"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textAlignment="gravity"
            android:paddingTop="8dp"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@color/background_light"
            >
            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/benefits_of_learning_ml_title"
                android:textSize="18sp"
                android:textColor="@color/foreground_light"
                />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/benefits_of_learning_ml_desc1"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/benefits_of_learning_ml_desc2"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/benefits_of_learning_ml_desc3"
                android:textColor="@color/white"
                />
        </LinearLayout>



        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/study_icon"
            android:textColor="@color/white"
            />

    </LinearLayout>

</ScrollView>