<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="Machine Learning syllabus"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:background="@color/background_dark_light"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"


            >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/basic_ml"
                android:textSize="20sp"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="190dp"
                android:layout_marginBottom="12dp"
                />

            <LinearLayout
                android:id="@+id/button_lesson_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                android:background="@color/background_light"
                android:clickable="true"
                android:contentDescription="basic_machine_learning_model"
                android:onClick="lessonOnClick"
                android:paddingBottom="12dp">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:srcCompat="@drawable/basic_ml_icon" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="16dp"
                    >
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/basic_model_title"
                        android:textColor="@color/foreground_light"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="2dp"
                        android:text="How ML learn from data?"
                        android:textColor="@color/white"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_lesson_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@color/background_light"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="unDevelopedLessonOnClick"
                android:paddingBottom="12dp">


                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/basic_convolutional_network_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="16dp"
                    >
                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/basic_convolutional_title"
                        android:textColor="@color/foreground_light"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="How ML deal with image?"
                        android:textColor="@color/white"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_lesson_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/background_light"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="unDevelopedLessonOnClick"
                android:paddingBottom="12dp">


                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/natural_language_processing_icon" />

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    >
                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/basic_natural_language_processing_title"
                        android:textColor="@color/foreground_light"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="How ML deal with languages?"
                        android:textColor="@color/white"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@color/background_dark_light"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:textColor="@color/white"
                android:layout_marginBottom="12dp"
                android:text="@string/advanced_ml"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="190dp" />

            <LinearLayout
                android:id="@+id/button_lesson_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/background_light"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="unDevelopedLessonOnClick"
                android:paddingBottom="12dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/basic_autoencoder_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/advanced_autoencoder_title"
                        android:textColor="@color/foreground_light"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Creating Representation of Data"
                        android:textColor="@color/white"
                        />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>